# ComfyUI-Qwen-Cinematic-Lighting

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
engine/: __init__.py  cinematic_logic.py  gemini_lighting_expert.py  lighting_system.py  metadata_schema.py  prompt_compiler.py
nodes/: __init__.py  preserve.py  studio.py
web/js/: stage3d_ui.js
