[project]
name = "comfyui-qwen-cinematic-lighting"
description = "ComfyUI Gemini Lighting Expert with CLIP conditioning and structure-locked Flux relighting output."
version = "3.1.0"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/kuangrenaigc-stack/ComfyUI-Qwen-Cinematic-Lighting"

[tool.comfy]
PublisherId = "qwen-cinematic"
DisplayName = "Gemini Lighting Expert"
Icon = ""
